--- a/common_func_app/templates/home.html
+++ b/common_func_app/templates/home.html
@@ -1,6 +1,19 @@
 <div>
-  <form action="/shut_down/" methos="POST">
-    <!-- {% csrf_token %} -->
+  <form action="/shut_down/" method="POST">
     <input type="submit" value="SHUT DOWN" />
+  </form>
+
+  <br />
+  <br />
+  <br />
+  <form action="/launch_youtube/" method="POST">
+    <label for="searchText"> </label>
+    <input
+      id="searchText"
+      type="text"
+      name="searchText"
+      value="{{searchText}}"
+    />
+    <input type="submit" value="LAUNCH YOUTUBE" />
   </form>
 </div>
